[SPv175] Disable comparison of some paint property node fields

The fields are used for SPv2 only, so disable comparison of them
for SPv175.

Bug: 813577
Cq-Include-Trybots: master.tryserver.blink:linux_trusty_blink_rel;master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2
Change-Id: I09f808d7545e49edefdbffcff1bb4385563a47d9
Reviewed-on: https://chromium-review.googlesource.com/926911
Commit-Queue: Xianzhu Wang <wangxianzhu@chromium.org>
Reviewed-by: Stephen Chenney <schenney@chromium.org>
Cr-Commit-Position: refs/heads/master@{#537906}