third_party/WebKit/Source/platform/graphics/paint/EffectPaintPropertyNode.h
@@ -14,6 +14,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "platform/graphics/paint/ClipPaintPropertyNode.h"
 #include "platform/graphics/paint/PaintPropertyNode.h"
 #include "platform/graphics/paint/TransformPaintPropertyNode.h"
+#include "platform/runtime_enabled_features.h"
 #include "platform/wtf/text/WTFString.h"
 
 #include <iosfwd>
@@ -65,8 +66,9 @@ class PLATFORM_EXPORT EffectPaintPropertyNode
     if (local_transform_space == local_transform_space_ &&
         output_clip == output_clip_ && color_filter == color_filter_ &&
         filter == filter_ && opacity == opacity_ && blend_mode == blend_mode_ &&
-        direct_compositing_reasons == direct_compositing_reasons_ &&
-        compositor_element_id == compositor_element_id_ &&
+        (!RuntimeEnabledFeatures::SlimmingPaintV2Enabled() ||
+         (direct_compositing_reasons == direct_compositing_reasons_ &&
+          compositor_element_id == compositor_element_id_)) &&
         paint_offset == paint_offset_)
       return parent_changed;
 
@@ -122,8 +124,9 @@ class PLATFORM_EXPORT EffectPaintPropertyNode
            output_clip_ == o.output_clip_ && color_filter_ == o.color_filter_ &&
            filter_ == o.filter_ && opacity_ == o.opacity_ &&
            blend_mode_ == o.blend_mode_ &&
-           direct_compositing_reasons_ == o.direct_compositing_reasons_ &&
-           compositor_element_id_ == o.compositor_element_id_ &&
+           (!RuntimeEnabledFeatures::SlimmingPaintV2Enabled() ||
+            (direct_compositing_reasons_ == o.direct_compositing_reasons_ &&
+             compositor_element_id_ == o.compositor_element_id_)) &&
            paint_offset_ == o.paint_offset_;
   }
 #endif
