third_party/WebKit/Source/platform/graphics/paint/TransformPaintPropertyNode.h
@@ -13,6 +13,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "platform/graphics/paint/GeometryMapperTransformCache.h"
 #include "platform/graphics/paint/PaintPropertyNode.h"
 #include "platform/graphics/paint/ScrollPaintPropertyNode.h"
+#include "platform/runtime_enabled_features.h"
 #include "platform/transforms/TransformationMatrix.h"
 #include "platform/wtf/text/WTFString.h"
 
@@ -78,9 +79,11 @@ class PLATFORM_EXPORT TransformPaintPropertyNode
 
     if (matrix == matrix_ && origin == origin_ &&
         flattens_inherited_transform == flattens_inherited_transform_ &&
-        rendering_context_id == rendering_context_id_ &&
-        direct_compositing_reasons == direct_compositing_reasons_ &&
-        compositor_element_id == compositor_element_id_ && scroll == scroll_)
+        (!RuntimeEnabledFeatures::SlimmingPaintV2Enabled() ||
+         (rendering_context_id == rendering_context_id_ &&
+          direct_compositing_reasons == direct_compositing_reasons_ &&
+          compositor_element_id == compositor_element_id_)) &&
+        scroll == scroll_)
       return parent_changed;
 
     SetChanged();
@@ -146,9 +149,10 @@ class PLATFORM_EXPORT TransformPaintPropertyNode
     return Parent() == o.Parent() && matrix_ == o.matrix_ &&
            origin_ == o.origin_ &&
            flattens_inherited_transform_ == o.flattens_inherited_transform_ &&
-           rendering_context_id_ == o.rendering_context_id_ &&
-           direct_compositing_reasons_ == o.direct_compositing_reasons_ &&
-           compositor_element_id_ == o.compositor_element_id_ &&
+           (!RuntimeEnabledFeatures::SlimmingPaintV2Enabled() ||
+            (rendering_context_id_ == o.rendering_context_id_ &&
+             direct_compositing_reasons_ == o.direct_compositing_reasons_ &&
+             compositor_element_id_ == o.compositor_element_id_)) &&
            scroll_ == o.scroll_;
   }
 #endif
